# OpenDsStar

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml
.bob/rules-advance/: AGENTS.md
.bob/rules-ask/: AGENTS.md
.bob/rules-code/: AGENTS.md
.bob/rules-plan/: AGENTS.md
docs/: AGENTS.md  AGENT_IMPLEMENTATIONS.md  ARCHITECTURE.md  BENCHMARKS.md  CLAUDE.md  DS_STAR_AGENT.md  DS_STAR_MCP_INTEGRATION.md  EXPERIMENTS.md  EXPERIMENT_PARAMS.md  FAQ.md  GETTING_STARTED.md  INSTALLATION.md  MODEL_PROVIDERS.md  REACT_AGENT_WRAPPER.md  REAL_WORLD_EXAMPLES.md
docs/developer/: EXPERIMENT_DEVELOPMENT.md  RECREATABLE_CONFIG.md  TOKEN_TRACKING.md
scripts/: README_run_databench.md  analyze_experiment_results.py  convert_parquet_to_csv.py  describe_databench_files.py  evaluate_all_databench_results.py  evaluate_databench_results.py  export_databench_to_csv.py  print_file_descriptions_cache.py  run_databench_3questions.py
src/OpenDsStar/: __init__.py
src/OpenDsStar/agents/: __init__.py  base_agent.py
src/OpenDsStar/agents/analyzer/: analyzer_execute_env.py  analyzer_graph.py
src/OpenDsStar/agents/codeact_smolagents/: codeact_agent_smolagents.py
src/OpenDsStar/agents/ds_star/: ds_star_execute_env.py  ds_star_graph.py  ds_star_results_prep.py  ds_star_state.py  ds_star_utils.py  open_ds_star_agent.py
src/OpenDsStar/agents/react_langchain/: react_agent_langchain.py
src/OpenDsStar/agents/react_smolagents/: react_agent_smolagents.py
src/OpenDsStar/agents/utils/: __init__.py  cache_manager.py  logging_utils.py  model_builder.py  model_provider_registry.py  (+3 more)
src/OpenDsStar/core/: __init__.py  milvus_uri.py
src/OpenDsStar/experiments/: README.md  __init__.py  example.py  pipeline.py
src/OpenDsStar/ingestion/: analyzer.py  docling_cache.py  utils.py
src/OpenDsStar/runner/: agent_class.py  simple_qa_loop.py
src/OpenDsStar/tools/: __init__.py  file_retriever_tool.py  mcp_client_standalone.py  mcp_integration_standalone.py  vector_store_tool.py
src/OpenDsStar/ui/: __init__.py
src/agents/: __init__.py  base_agent.py
src/agents/analyzer/: __init__.py  analyzer_execute_env.py  analyzer_graph.py  analyzer_state.py
src/agents/codeact_smolagents/: codeact_agent_smolagents.py
src/agents/ds_star/: ds_star_execute_env.py  ds_star_graph.py  ds_star_results_prep.py  ds_star_utils.py  open_ds_star_agent.py
src/agents/react_langchain/: react_agent_langchain.py
src/agents/react_smolagents/: react_agent_smolagents.py
src/agents/utils/: agents_utils.py  cache_manager.py  litellm_cache_config.py  model_builder.py  model_config.py  model_provider.py  model_provider_registry.py  provider_registry.py  safe_imports.py  structured_safe_sqlite_cache.py
src/core/: model_registry.py
src/experiments/: __init__.py  example.py  pipeline.py
src/experiments/base/: __init__.py  base_experiment.py
src/experiments/benchmarks/: shared_tools.py
src/experiments/core/: __init__.py  config.py
src/experiments/demo/: __init__.py  create_mcp_tools.py  data_reader.py  databench_loader.py  mcp_multi_agent_example.py
src/experiments/evaluators/: __init__.py  ragbench_llm_judge.py
src/experiments/implementations/: __init__.py  agent_factory.py  invoke_agent_runner.py  ragbench_converters.py  ragbench_data_reader.py
src/experiments/interfaces/: __init__.py  agent_builder.py  ragbench_data_reader.py  tool_builder.py
src/experiments/utils/: data_reader_cache.py  logging.py  model_provider_setup.py  recreatable.py  tool_registry.py  validation.py
src/ingestion/: analyzer.py  docling_cache.py  document_description_builder.py
src/ingestion/docling_based_ingestion/: batching.py  docling_description_builder.py  file_description_generator.py  prompts.py  sources.py
src/runner/: agent_class.py  simple_qa_loop.py
src/tools/: __init__.py  analyzer_retriever.py  file_retriever_tool.py  mcp_integration_standalone.py  string_to_stream_tool.py  vector_store_tool.py
src/ui/agentic_results_viewer/: README.md  agentic_results_comparisson.py  agentic_results_viewer.py  agentic_viewer_utils.py
tests/: README.md  conftest.py  standalone_load_params.py  standalone_mcp_async_simple.py  standalone_milvus_search_changes.py  test_cache_integration.py  test_cache_required.py  test_data_reader_cache.py  test_docling_cache.py  test_trajectory_fix.py
tests/agents/: test_codeact_agent_smolagents.py  test_open_ds_star_agent.py  test_react_agent_langchain.py  test_react_agent_smolagents.py  test_token_tracking.py
tests/agents/ds_star/: test_build_tools_map.py  test_dataframe_serialization.py  test_ds_star_graph.py  test_ds_star_integration.py  test_ds_star_results_prep.py  test_ds_star_state.py  test_execute_env_direct_calls.py  test_execute_env_safety.py  test_execution_mode_prompts.py  test_syntax_error_debugger_integration.py  test_syntax_error_handling.py  test_timeout_fix.py  test_trajectory_serialization.py
tests/agents/utils/: test_ds_star_utils.py  test_litellm_cache.py  test_model_builder.py  test_remove_imports.py  test_safe_imports.py
tests/e2e/: README.md  conftest.py  test_databench_codeact_e2e.py  test_databench_e2e.py  test_hotpotqa_e2e.py  test_kramabench_e2e.py
tests/experiments/: test_experiment_recreatable.py  test_experiment_save_load_run.py  test_file_content_tool_mapping.py  test_params_save_load.py
tests/experiments/benchmarks/: test_databench_combinations.py  test_databench_data_reader.py  test_kramabench_tools_unit.py
tests/experiments/core/: test_config.py  test_types.py
tests/experiments/utils/: test_cache.py  test_evaluation_cache.py  test_evaluation_cache_integration.py  test_recreatable.py  test_tool_registry.py  test_validation.py
tests/ingestion/: test_analyzer_description_builder_cache.py  test_docling_batching.py  test_docling_converter.py  test_docling_description_builder_cache.py  test_docling_sources.py  test_file_description_generator.py  test_markdown_shortener.py  test_parquet_conversion.py  test_tabular_fast_path.py
tests/tools/: test_mcp_integration_standalone.py
tests/ui/: test_data_loading.py
(+114 files in other folders)
