[build-system]
requires = ["setuptools==69.5.1", "wheel>=0.45"]
build-backend = "setuptools.build_meta"

[project]
name = "OpenDsStar"
version = "0.1.0"
authors = [
    {name = "Yoav Kantor", email = "yoavka@il.ibm.com"},
    {name = "Assaf Toledo", email = "assaf.toledo@ibm.com"},
    {name = "Gal Bloch", email = "gal.bloch@ibm.com"},
]
description = "A tool-based DS-Star agent implementation using LangGraph"
readme = "README.md"
requires-python = ">=3.11,<3.14"
keywords = ["agent", "llm", "langgraph", "data-science", "ds-star"]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "setuptools==69.5.1",
    "langgraph==1.0.1",
    "langchain==0.3.28",
    "langchain-core==0.3.83",
    "langchain-community==0.3.31",
    "langchain-litellm==0.3.5",
    "langchain-milvus==0.1.7",
    "langchain-huggingface==0.3.1",
    "pymilvus==2.6.7",
    "milvus-lite==2.5.1",
    "scipy==1.17.0",
    "pydantic==2.12.5",
    "numpy==2.4.1",
    "pandas==2.3.3",
    "python-dotenv==1.2.1",
    "litellm==1.81.4",
    "docling==2.68.0",
    "sentence-transformers==5.2.0",
    "diskcache==5.6.3",
    "tqdm==4.67.1",
    "smolagents==1.24.0",
    "matplotlib==3.10.8",
    "plotly==6.6.0",
    "kaleido==1.2.0",
    "datasets==4.0.0",
    "huggingface-hub==0.36.0",
    "ragworkbench @ git+https://github.com/IBM/RagWorkbench.git",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.26.0,<2.0.0",
    "fastmcp>=3.1.1,<4.0.0",
]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio>=0.21.0",
    "black==25.1.0",
    "ruff==0.11.13",
    "mypy>=1.19.1,<2.0.0",
    "pre-commit==4.5.1",
]
test = [
    "pytest==9.0.2",
    "pytest-asyncio>=0.21.0",
]
ui = [
    "streamlit>=1.55.0,<2.0.0",
    "pandas==2.3.3",
]

[project.urls]
Repository = "https://github.com/IBM/OpenDsStar"
Documentation = "https://github.com/IBM/OpenDsStar#readme"
Issues = "https://github.com/IBM/OpenDsStar/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["agents*", "experiments*", "tools*", "ingestion*", "runner*", "core*"]
namespaces = false

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests (require API access)",
    "asyncio: marks tests as async tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning:pydantic.*",
    "ignore:.*Pydantic serializer warnings.*:UserWarning",
    "ignore:.*force_all_finite.*:FutureWarning",
    "ignore:.*pin_memory.*:UserWarning",
    "ignore:.*pkg_resources.*:UserWarning",
]
norecursedirs = [
    ".venv",
    "venv",
    ".git",
    "__pycache__",
    "docs",
    "build",
    "dist",
    "logs",
]